--- a/requirements.txt
+++ b/requirements.txt
@@ -12,7 +12,7 @@ certifi==2019.11.28
 chardet==3.0.4
 charset-normalizer==3.3.2
 Click==7.0
-cloud-init==23.1.2
+cloud-init>=23.1.0
 colorama==0.4.3
 comm==0.2.2
 command-not-found==0.3
