--- a/requirements.txt
+++ b/requirements.txt
@@ -16,6 +16,7 @@ idna==3.8
 importlib-resources==6.4.4
 jedi==0.19.1
 jinja2==3.1.4
+joblib==1.4.2
 jsonschema==4.23.0
 jsonschema-specifications==2023.12.1
 jupyter-core==5.7.2
